--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "gray-matter": "^4.0.2",
+    "https": "^1.0.0",
     "next": "^9.3.6",
     "node-sass": "^4.13.1",
     "raw-loader": "^4.0.0",
